# quadruped_motion

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: default.yml
config/: b2_sim.yaml  go2_sim.yaml
config/mujoco/: go2_sim.yaml
include/mujoco_sim/: mujoco_sim.hpp
src/: CMakeLists.txt  mujoco_sim.cpp
src/unitree/: CMakeLists.txt  main.cc
src/unitree/test/: CMakeLists.txt
